# secure-keypad-SW-for-HW

./: .gitignore  CMakeLists.txt  README.md
APP/inc/: display_7seg.h  led_status.h  mealy_fsm.h  system_events.h
APP/src/app/: main.c
APP/src/drivers/: buttons_exti.c  display_7seg.c  keypad.c  led_status.c
APP/src/logic/: mealy_fsm.c  system_events.c
Simulation/: secure_keypad_simulation.pdsprj
cmake/: ArmToolchain.cmake  Device.cmake  IncludeList.cmake
inc/: buttons_exti.h  keypad.h  mealy_fsm.h  system_events.h
src/app/: main.c
src/drivers/: buttons_exti.c  display_7seg.c  keypad.c  led_status.c
src/logic/: mealy_fsm.c  system_events.c
